--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     }
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.9",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "joi": "17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "md5": "^2.3.0",
     "mysql2": "^3.14.0",
     "sequelize": "^6.32.1",
